# ag-wasm

./: .gitignore  .npmrc  Cargo.toml  LICENSE_MIT  README.md  bump.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: github-release.yml
playground/: package.json  tsconfig.json  vite.config.ts
playground/src/: App.vue
playground/src/components/: AgWasm.vue  bundler.vue  web.vue
scripts/: build.ts  post-bumpp.ts
src/: dump_tree.rs  lib.rs  utils.rs  wasm_lang.rs
tree-sitter-wasm/: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
tree-sitter-wasm/crates/tree-sitter-facade/: Cargo.toml  README.md
tree-sitter-wasm/crates/tree-sitter-facade/src/: error.rs  input_edit.rs  language.rs  lib.rs  node.rs  parser.rs  point.rs  query.rs  range.rs  tree.rs  tree_cursor.rs
tree-sitter-wasm/crates/web-tree-sitter-sg/: Cargo.toml  README.md  package.json
tree-sitter-wasm/crates/web-tree-sitter-sg/src/: lib.rs
tree-sitter-wasm/crates/web-tree-sitter-sg/tests/node/: edit.rs  language.rs  main.rs  parse_options.rs  parser.rs  point.rs  predicate_operand.rs  predicate_result.rs  query.rs  query_capture.rs  query_match.rs  range.rs  syntax_node.rs  tree.rs  tree_cursor.rs  util.rs
tree-sitter-wasm/crates/web-tree-sitter-sg/tests/node/util/: language.rs  syntax_node.rs  tree.rs
