[package]
edition = "2021"
name = "tree-sitter-facade-sg"
version.workspace = true
authors = ["<herringtondarkholme@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/ast-grep/tree-sitter-facade"
description = """
A uniform interface for `tree-sitter` (rust) and `web-tree-sitter` (wasm-bindgen).
"""

[badges]
maintenance = { status = "experimental" }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"

[features]

[dependencies]
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tree-sitter.workspace = true
tree-sitter-language.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = ["strict-macro"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-tree-sitter-sg]
workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = []

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
